gen/CoralParser.java
// Generated from D:/Universidad/0Actual/Programming Languages/CoralTranslator/grammar\Coral.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CoralParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, ESP=31, FLOAT=32, 
		INTEGER=33, ASSIGN=34, PERIOD=35, COMMA=36, SEMICOLON=37, CLOSING_BRA=38, 
		OPENING_BRA=39, CLOSING_PAR=40, OPENING_PAR=41, PLUS=42, MINUS=43, TIMES=44, 
		DIV=45, MOD=46, EQUAL=47, NEQ=48, LESS=49, LEQ=50, GREATER=51, GEQ=52, 
		QUESTION_MARK=53, COMMENT=54, ID=55, STRING=56;
	public static final int
		RULE_inicio = 0, RULE_function = 1, RULE_sentencias = 2, RULE_id_asg = 3, 
		RULE_variable_declaration = 4, RULE_if = 5, RULE_while = 6, RULE_for = 7, 
		RULE_salida = 8, RULE_seedrn = 9, RULE_expresion_aritmetica_for = 10, 
		RULE_asignacion = 11, RULE_complemento_asignacion = 12, RULE_expresion_aritmetica = 13, 
		RULE_expresion_aritmetica2 = 14, RULE_expresion_aritmetica3 = 15, RULE_expresion_aritmetica4 = 16, 
		RULE_expresion_aritmetica5 = 17, RULE_signo = 18, RULE_operadores_mat1 = 19, 
		RULE_operadores_mat2 = 20, RULE_numero = 21, RULE_params_function_call = 22, 
		RULE_mas_params = 23, RULE_entrada = 24, RULE_continua_programa = 25, 
		RULE_complemento_id = 26, RULE_complemento_salida = 27, RULE_precision_salida = 28, 
		RULE_expresion_aritmetica_precision = 29, RULE_tipo_dato = 30, RULE_es_arreglo = 31, 
		RULE_tamano_arreglo = 32, RULE_cuerpo_control = 33, RULE_nested_if = 34, 
		RULE_cond_bool_if = 35, RULE_cond_bool_while = 36, RULE_cond_bool_for = 37, 
		RULE_cond_bool = 38, RULE_cond_bool2 = 39, RULE_cond_bool3 = 40, RULE_cond_bool4 = 41, 
		RULE_cond_bool5 = 42, RULE_cond_bool6 = 43, RULE_cond_bool7 = 44, RULE_cond_bool8 = 45, 
		RULE_cond_bool9 = 46, RULE_cond_bool10 = 47, RULE_cond_bool11 = 48, RULE_cond_bool12 = 49, 
		RULE_cond_bool13 = 50, RULE_cond_bool14 = 51, RULE_cond_bool15 = 52, RULE_equal_operator = 53, 
		RULE_compare_operator = 54, RULE_elseif = 55, RULE_else = 56, RULE_parametros_definicion = 57, 
		RULE_mas_parametros_definicion = 58, RULE_tipo_retorno = 59, RULE_at = 60, 
		RULE_au = 61, RULE_av = 62, RULE_aw = 63, RULE_ax = 64, RULE_ay = 65, 
		RULE_mas_funciones = 66, RULE_mas_funciones_tipo = 67;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "function", "sentencias", "id_asg", "variable_declaration", 
			"if", "while", "for", "salida", "seedrn", "expresion_aritmetica_for", 
			"asignacion", "complemento_asignacion", "expresion_aritmetica", "expresion_aritmetica2", 
			"expresion_aritmetica3", "expresion_aritmetica4", "expresion_aritmetica5", 
			"signo", "operadores_mat1", "operadores_mat2", "numero", "params_function_call", 
			"mas_params", "entrada", "continua_programa", "complemento_id", "complemento_salida", 
			"precision_salida", "expresion_aritmetica_precision", "tipo_dato", "es_arreglo", 
			"tamano_arreglo", "cuerpo_control", "nested_if", "cond_bool_if", "cond_bool_while", 
			"cond_bool_for", "cond_bool", "cond_bool2", "cond_bool3", "cond_bool4", 
			"cond_bool5", "cond_bool6", "cond_bool7", "cond_bool8", "cond_bool9", 
			"cond_bool10", "cond_bool11", "cond_bool12", "cond_bool13", "cond_bool14", 
			"cond_bool15", "equal_operator", "compare_operator", "elseif", "else", 
			"parametros_definicion", "mas_parametros_definicion", "tipo_retorno", 
			"at", "au", "av", "aw", "ax", "ay", "mas_funciones", "mas_funciones_tipo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Function'", "'returns'", "'if'", "'while'", "'for'", "'Put'", 
			"'SeedRandomNumbers'", "'size'", "'SquareRoot'", "'AbsoluteValue'", "'RaiseToPower'", 
			"'RandomNumber'", "'Get '", "'next '", "'input'", "'to'", "'output'", 
			"'with'", "'decimal'", "'places'", "'float'", "'integer'", "'array'", 
			"'or'", "'and'", "'not'", "'elseif'", "'else'", "'nothing'", "'Main'", 
			null, null, null, "'='", "'.'", "','", "';'", "']'", "'['", "')'", "'('", 
			"'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", "'<'", "'<='", "'>'", 
			"'>='", "'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "ESP", "FLOAT", "INTEGER", 
			"ASSIGN", "PERIOD", "COMMA", "SEMICOLON", "CLOSING_BRA", "OPENING_BRA", 
			"CLOSING_PAR", "OPENING_PAR", "PLUS", "MINUS", "TIMES", "DIV", "MOD", 
			"EQUAL", "NEQ", "LESS", "LEQ", "GREATER", "GEQ", "QUESTION_MARK", "COMMENT", 
			"ID", "STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Coral.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CoralParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InicioContext extends ParserRuleContext {
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoralListener ) ((CoralListener)listener).enterInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoralListener ) ((CoralListener)listener).exitInicio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoralVisitor ) return ((CoralVisitor<? extends T>)visitor).visitInicio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		try {
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				function();
				}
				break;
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
			case T__20:
			case T__21:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				sentencias();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CoralParser.ID, 0); }
		public TerminalNode OPENING_PAR() { return getToken(CoralParser.OPENING_PAR, 0); }
		public Parametros_definicionContext parametros_definicion() {
			return getRuleContext(Parametros_definicionContext.class,0);
		}
		public TerminalNode CLOSING_PAR() { return getToken(CoralParser.CLOSING_PAR, 0); }
		public Tipo_retornoContext tipo_retorno() {
			return getRuleContext(Tipo_retornoContext.class,0);
		}
		public AtContext at() {
			return getRuleContext(AtContext.class,0);
		}
		public Mas_funcionesContext mas_funciones() {
			return getRuleContext(Mas_funcionesContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoralListener ) ((CoralListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoralListener ) ((CoralListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoralVisitor ) return ((CoralVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(T__0);
			setState(141);
			match(ID);
			setState(142);
			match(OPENING_PAR);
			setState(143);
			parametros_definicion();
			setState(144);
			match(CLOSING_PAR);
			setState(145);
			match(T__1);
			setState(146);
			tipo_retorno();
			setState(147);
			at();
			setState(148);
			mas_funciones();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciasContext extends ParserRuleContext {
		public Id_asgContext id_asg() {
			return getRuleContext(Id_asgContext.class,0);
		}
		public SeedrnContext seedrn() {
			return getRuleContext(SeedrnContext.class,0);
		}
		public SalidaContext salida() {
			return getRuleContext(SalidaContext.class,0);
		}
		public Variable_declarationContext variable_declaration() {
			return getRuleContext(Variable_declarationContext.class,0);
		}
		public ForContext for_() {
			return getRuleContext(ForContext.class,0);
		}
		public WhileContext while_() {
			return getRuleContext(WhileContext.class,0);
		}
		public IfContext if_() {
			return getRuleContext(IfContext.class,0);
		}
		public SentenciasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoralListener ) ((CoralListener)listener).enterSentencias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoralListener ) ((CoralListener)listener).exitSentencias(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoralVisitor ) return ((CoralVisitor<? extends T>)visitor).visitSentencias(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciasContext sentencias() throws RecognitionException {
		SentenciasContext _localctx = new SentenciasContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sentencias);
		try {
			setState(157);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				id_asg();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				seedrn();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 3);
				{
				setState(152);
				salida();
				}
				break;
			case T__20:
			case T__21:
				enterOuterAlt(_localctx, 4);
				{
				setState(153);
				variable_declaration();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 5);
				{
				setState(154);
				for_();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 6);
				{
				setState(155);
				while_();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 7);
				{
				setState(156);
				if_();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Id_asgContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CoralParser.ID, 0); }
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public Continua_programaContext continua_programa() {
			return getRuleContext(Continua_programaContext.class,0);
		}
		public Id_asgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_asg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoralListener ) ((CoralListener)listener).enterId_asg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoralListener ) ((CoralListener)listener).exitId_asg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoralVisitor ) return ((CoralVisitor<? extends T>)visitor).visitId_asg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Id_asgContext id_asg() throws RecognitionException {
		Id_asgContext _localctx = new Id_asgContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_id_asg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(ID);
			setState(160);
			asignacion();
			setState(161);
			continua_programa();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_declarationContext extends ParserRuleContext {
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public Es_arregloContext es_arreglo() {
			return getRuleContext(Es_arregloContext.class,0);
		}
		public TerminalNode ID() { return getToken(CoralParser.ID, 0); }
		public Continua_programaContext continua_programa() {
			return getRuleContext(Continua_programaContext.class,0);
		}
		public Variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoralListener ) ((CoralListener)listener).enterVariable_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoralListener ) ((CoralListener)listener).exitVariable_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoralVisitor ) return ((CoralVisitor<? extends T>)visitor).visitVariable_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_declarationContext variable_declaration() throws RecognitionException {
		Variable_declarationContext _localctx = new Variable_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variable_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			tipo_dato();
			setState(164);
			es_arreglo();
			setState(165);
			match(ID);
			setState(166);
			continua_programa();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfContext extends ParserRuleContext {
		public Cond_bool_ifContext cond_bool_if() {
			return getRuleContext(Cond_bool_ifContext.class,0);
		}
		public Cuerpo_controlContext cuerpo_control() {
			return getRuleContext(Cuerpo_controlContext.class,0);
		}
		public ElseifContext elseif() {
			return getRuleContext(ElseifContext.class,0);
		}
		public Continua_programaContext continua_programa() {
			return getRuleContext(Continua_programaContext.class,0);
		}
		public IfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoralListener ) ((CoralListener)listener).enterIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoralListener ) ((CoralListener)listener).exitIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoralVisitor ) return ((CoralVisitor<? extends T>)visitor).visitIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfContext if_() throws RecognitionException {
		IfContext _localctx = new IfContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_if);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(T__2);
			setState(169);
			cond_bool_if();
			setState(170);
			cuerpo_control();
			setState(171);
			elseif();
			setState(172);
			continua_programa();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileContext extends ParserRuleContext {
		public Cond_bool_whileContext cond_bool_while() {
			return getRuleContext(Cond_bool_whileContext.class,0);
		}
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public Continua_programaContext continua_programa() {
			return getRuleContext(Continua_programaContext.class,0);
		}
		public WhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoralListener ) ((CoralListener)listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoralListener ) ((CoralListener)listener).exitWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoralVisitor ) return ((CoralVisitor<? extends T>)visitor).visitWhile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileContext while_() throws RecognitionException {
		WhileContext _localctx = new WhileContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_while);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(T__3);
			setState(175);
			cond_bool_while();
			setState(176);
			sentencias();
			setState(177);
			continua_programa();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(CoralParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CoralParser.ID, i);
		}
		public List<Complemento_asignacionContext> complemento_asignacion() {
			return getRuleContexts(Complemento_asignacionContext.class);
		}
		public Complemento_asignacionContext complemento_asignacion(int i) {
			return getRuleContext(Complemento_asignacionContext.class,i);
		}
		public List<TerminalNode> ASSIGN() { return getTokens(CoralParser.ASSIGN); }
		public TerminalNode ASSIGN(int i) {
			return getToken(CoralParser.ASSIGN, i);
		}
		public List<Expresion_aritmetica_forContext> expresion_aritmetica_for() {
			return getRuleContexts(Expresion_aritmetica_forContext.class);
		}
		public Expresion_aritmetica_forContext expresion_aritmetica_for(int i) {
			return getRuleContext(Expresion_aritmetica_forContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(CoralParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(CoralParser.SEMICOLON, i);
		}
		public Cond_boolContext cond_bool() {
			return getRuleContext(Cond_boolContext.class,0);
		}
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public Continua_programaContext continua_programa() {
			return getRuleContext(Continua_programaContext.class,0);
		}
		public ForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoralListener ) ((CoralListener)listener).enterFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoralListener ) ((CoralListener)listener).exitFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoralVisitor ) return ((CoralVisitor<? extends T>)visitor).visitFor(this);
			else return visitor.visitChildren(this);
		}
	}
